--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mathe-korrektur-app",
   "version": "1.0.0",
   "description": "Web-App zur Unterstützung bei der Korrektur von Mathe-Klausuren",
-  "main": "index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,8 +12,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   },
   "engines": {
     "node": ">=18"
